# rpmwhy

./: COMPILING  HACKING  README.md  meson.build  meson.options  rpmlsf.bash  rpmlsf.bash-completion  rpmlsf.sh  rpmquerytools.pod  rpmwhat.bash  rpmwhat.bash-completion  rpmwhy.bash  rpmwhy.sh
.meta/: COMPILING  HACKING  README.md  meson.build
